<resources>
    <string name="app_name">同城红包</string>
    <string name="clauseStr">登录即表示同意用户协议</string>
    <string name="map_expand_layout">1000米\n扩张收红包范围</string>
    <string name="map_advert_layout">下一个广告红包</string>
    <string name="send_edit_oa">总金额</string>
    <string name="send_edit_ob">元</string>
    <string name="send_edit_ma">红包个数</string>
    <string name="send_edit_mb">个</string>
    <string name="send_edit_pa">位置/范围</string>
    <string name="send_edit_money">输入金额</string>
    <string name="send_edit_much">填写个数</string>
    <string name="send_tips_one">附近的人可随机领取该红包</string>
    <string name="send_tips_two">最多可让附近的人领取的红包个数</string>
    <string name="send_check_encryption">红包加密（选填项）</string>
    <string name="send_encryption_modify">修改</string>
    <string name="send_edit_word_one">你想对大家说...</string>
    <string name="send_edit_word_two">你想对大家说...(最多27字)</string>
    <string name="send_tab_one">发广播</string>
    <string name="send_tab_two">发祝福</string>
    <string name="per_line_one">红包动态</string>
    <string name="per_line_two">在线客服</string>
    <string name="per_line_three">意见反馈</string>
    <string name="per_line_time">工作日：9:00-18:30</string>
    <string name="per_exit_logon">退出账号</string>
    <string name="search_edit_hint">搜索地点</string>
    <string name="search_range_tv">发布范围</string>
    <string name="search_range_one">一公里</string>
    <string name="search_range_two">全区/县</string>
    <string name="search_range_three">全市</string>
    <string name="please_edit">请输入密码</string>
    <string name="details_title">红包信息</string>
    <string name="details_hint">发表伟大言论…</string>
    <string name="hand_slow">手慢了，红包派完了</string>
    <string name="pep_title">我的</string>
    <string name="pep_level">我是普通用户</string>
    <string name="dynamic_card_one">收到总金额(元)</string>
    <string name="dynamic_card_two">钱包总金额(元)</string>
    <string name="dynamic_card_three">红包总金额(元)</string>
    <string name="dynamic_card_four">累计影响(人)</string>
    <string name="dynamic_tab_collect">收到的红包</string>
    <string name="dynamic_tab_send">我发的红包</string>
    <string name="screen">筛选</string>
    <string name="putWX">提现到微信</string>
    <string name="record_state_0">已通过</string>
    <string name="record_state_1">待审核</string>
    <string name="record_state_2">未通过</string>
    <string name="news">消息</string>
    <string name="wallet_tip_one">我的红包股价值=今日红包股价x我的红包股数</string>
</resources>
